# tsip-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: message_bench.rs  parse_bench.rs
docs/: HANDOVER.md  V0_2_0_HANDOFF.md  V0_2_1_HANDOFF.md  V0_3_0_HANDOFF.md
examples/: cluster_crashes.rs  xoracle.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: address.rs  message.rs  uri.rs
src/: address.rs  error.rs  lib.rs  message.rs  scan.rs  uri.rs
tests/: address_parity.rs  class_methods.rs  message_parity.rs  roundtrip.rs  uri_parity.rs
