[package]
name = "tsip-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tsip-parser]
path = ".."

[[bin]]
name = "uri"
path = "fuzz_targets/uri.rs"
test = false
doc = false
bench = false

[[bin]]
name = "address"
path = "fuzz_targets/address.rs"
test = false
doc = false
bench = false

[[bin]]
name = "message"
path = "fuzz_targets/message.rs"
test = false
doc = false
bench = false
